--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                         <li><a href="#"></a></li>
                     </ul>
                 </div>
-                <div class="col-xs-12 col-sm-3 column">
+ <!--               <div class="col-xs-12 col-sm-3 column">
                     <h4>Stay Posted</h4>
                     <form>
                         <div class="form-group">
@@ -344,7 +344,7 @@
                           <button class="btn btn-primary" data-toggle="modal" data-target="#alertModal" type="button">Subscribe for updates</button>
                         </div>
                     </form>
-                </div>
+                </div> -->
                 <div class="col-xs-12 col-sm-3 text-right">
                     <h4>Follow</h4>
                     <ul class="list-inline">
