--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class="page-scroll" href="#one">Intro</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#two">Slack</a>
+                        <a class="page-scroll" href="http://138.197.65.43:3000/">Slack</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#three">Gallery</a>
@@ -55,7 +55,7 @@
                 <h1 class="cursive">DFW Chef User Group</h1>
                 <h4>A place where like minded individuals can share experiences and learn from each other</h4>
                 <hr>
-                <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Join Our Slack Channel</a> &nbsp; <a href="#one" class="btn btn-primary btn-xl page-scroll">Learn More About Us</a>
+                <a href="http://138.197.65.43:3000/" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Join Our Slack Channel</a> &nbsp; <a href="#one" class="btn btn-primary btn-xl page-scroll">Learn More About Us</a>
             </div>
         </div>
         <video autoplay="" loop="" class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="https://s3-us-west-2.amazonaws.com/coverr/poster/Traffic-blurred2.jpg" id="video-background">
